# message-app

./: README.md
backend/: .gitignore  pyproject.toml
backend/messages/: asgi.py  settings.py  urls.py  wsgi.py
backend/messages/api/: apps.py  consumers.py  routing.py
backend/messages/api/migrations/: 0001_initial.py
backend/messages/api/models/: base.py  core.py  test.py
backend/messages/api/serializers/: __init__.py  conversation.py  message.py  test.py  user.py
backend/messages/api/urls/: __init__.py
backend/messages/api/urls/v1/: __init__.py
backend/messages/api/urls/v1/auth/: __init__.py
backend/messages/api/views/: __init__.py  auth.py  conversation.py  message.py  test.py  user.py
backend/messages/middlewares/: auth_middleware.py
frontend/mobile/: .gitignore  pubspec.yaml
frontend/mobile/android/app/: build.gradle
frontend/mobile/ios/Runner.xcodeproj/: project.pbxproj
frontend/mobile/lib/: main.dart
frontend/mobile/lib/core/service/: api_service.dart
frontend/mobile/lib/data/models/: conversations.dart  messages.dart  participant.dart
frontend/mobile/lib/data/repository/: auth_repository.dart  conversation_repository.dart  messages_repository.dart
frontend/mobile/lib/domain/usecases/: get_conversations.dart  get_messages.dart
frontend/mobile/lib/domain/usecases/auth/: login.dart
frontend/mobile/lib/presentation/screens/: chat.dart  home.dart  profile.dart
frontend/mobile/lib/presentation/screens/auth/: login.dart
frontend/mobile/lib/presentation/state_management/controllers/: auth_controller.dart  chat_controller.dart  (+1 more)
